# zero2prod

./: .pre-commit-config.yaml  Cargo.toml  Dockerfileold  Dockerfileprechel  configuration.yaml  spec.yaml
.cargo/: config.toml
.github/workflows/: General.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20220413184733_add_status_to_subscriptions.sql  20220413192746_add_subscription_token_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
