[package]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
chrono = "0.4.19"
config = "0.12.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = {version = "1.0.136", features = ["derive"]}
sqlx = {version = "0.5.11", default-features = false, features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]}
tokio = {version = "1.17.0", features = ["macros", "rt-multi-thread"]}
tracing = {version = "0.1.32", features = ["log"]}
tracing-actix-web = "0.5.1"
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-subscriber = {version = "0.3.9", features = ["std", "env-filter"]}
uuid = {version = "0.8.2", features = ["v4"]}

[dev-dependencies]
once_cell = "1.10.0"
reqwest = "0.11.10"
